--- a/LeisureMap/LeisureMap/Info.plist
+++ b/LeisureMap/LeisureMap/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>LeisureMap需要知道你的位置以提供更好的服务</string>
+	<key>NSLocationUsageDescription</key>
+	<string>LeisureMap需要知道你的位置以提供更好的服务</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>LeisureMap需要知道你的位置以提供更好的服务</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>LeisureMap需要知道你的位置以提供更好的服务</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
