--- a/LeisureMap/LeisureMap/Info.plist
+++ b/LeisureMap/LeisureMap/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>访问相册获取图片进行记录</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>LeisureMap需要知道你的位置以提供更好的服务</string>
 	<key>NSLocationUsageDescription</key>
