--- a/LeisureMap/LeisureMap/Info.plist
+++ b/LeisureMap/LeisureMap/Info.plist
@@ -2,16 +2,22 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleDisplayName</key>
+	<string>$(PRODUCT_NAME)</string>
+	<key>LSHasLocalizedDisplayName</key>
+	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>use Camera</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>访问相册获取图片进行记录</string>
+	<string>use Photo Library</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>LeisureMap需要知道你的位置以提供更好的服务</string>
+	<string>ask Location</string>
 	<key>NSLocationUsageDescription</key>
-	<string>LeisureMap需要知道你的位置以提供更好的服务</string>
+	<string>ask Location</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>LeisureMap需要知道你的位置以提供更好的服务</string>
+	<string>ask Location</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>LeisureMap需要知道你的位置以提供更好的服务</string>
+	<string>ask Location</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
