新增地图与Web界面

--- a/LeisureMap-OC/LeisureMap-OC/Resources/Info.plist
+++ b/LeisureMap-OC/LeisureMap-OC/Resources/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>为了更好服务您，需要知道当前的位置</string>
+	<key>NSLocationUsageDescription</key>
+	<string>为了更好服务您，需要知道当前的位置</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>为了更好服务您，需要知道当前的位置</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>为了更好服务您，需要知道当前的位置</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
