--- a/LeisureMap-OC/LeisureMap-OC/Resources/Info.plist
+++ b/LeisureMap-OC/LeisureMap-OC/Resources/Info.plist
@@ -2,14 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>为了更好服务您，需要知道当前的位置</string>
-	<key>NSLocationUsageDescription</key>
-	<string>为了更好服务您，需要知道当前的位置</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>为了更好服务您，需要知道当前的位置</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>为了更好服务您，需要知道当前的位置</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -28,6 +20,23 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>为了更好服务您，需要知道当前的位置</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>为了更好服务您，需要知道当前的位置</string>
+	<key>NSLocationUsageDescription</key>
+	<string>为了更好服务您，需要知道当前的位置</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>为了更好服务您，需要知道当前的位置</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>将您拍照的图片保存到相册</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>将您拍照的图片保存到相册</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -45,10 +54,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
-    </dict>
 </dict>
 </plist>
