--- a/LeisureMap-OC/LeisureMap-OC/Resources/Info.plist
+++ b/LeisureMap-OC/LeisureMap-OC/Resources/Info.plist
@@ -2,8 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>启用相机进行拍照，留下生活美好瞬间</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -17,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1</string>
+	<string>1.2</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -27,6 +25,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>启用相机进行拍照，留下生活美好瞬间</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>为了更好服务您，需要知道当前的位置</string>
 	<key>NSLocationAlwaysUsageDescription</key>
@@ -39,6 +39,8 @@
 	<string>将您拍照的图片保存到相册</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>将您拍照的图片保存到相册</string>
+	<key>UILaunchStoryboardName</key>
+	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
