--- a/LeisureMap-OC/LeisureMap-OC/Resources/Info.plist
+++ b/LeisureMap-OC/LeisureMap-OC/Resources/Info.plist
@@ -26,19 +26,19 @@
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>启用相机进行拍照，留下生活美好瞬间</string>
+	<string>Enable the camera to take pictures and record the beautiful moments of life</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>为了更好服务您，需要知道当前的位置</string>
+	<string>Need to know your location to provide better service</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>为了更好服务您，需要知道当前的位置</string>
+	<string>Need to know your location to provide better service</string>
 	<key>NSLocationUsageDescription</key>
-	<string>为了更好服务您，需要知道当前的位置</string>
+	<string>Need to know your location to provide better service</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>为了更好服务您，需要知道当前的位置</string>
+	<string>Need to know your location to provide better service</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>将您拍照的图片保存到相册</string>
+	<string>Visit the album to get pictures for a good life memory</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>将您拍照的图片保存到相册</string>
+	<string>Visit the album to get pictures for a good life memory</string>
 	<key>UILaunchStoryboardName</key>
 	<string>Launch Screen</string>
 	<key>UIMainStoryboardFile</key>
